--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "eslint-config-airbnb": "^18.2.1"
+    "eslint-config-airbnb": "^18.2.1",
+    "gh-pages": "^3.1.0"
   }
 }
