--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://gardener-of-us.github.io/gardener-fe/"
   "name": "react-material-dashboard",
   "author": "DeviasIO",
   "licence": "MIT",
@@ -9,6 +10,10 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    
+    //usage: gitpage deploy
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
