--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gardener-of-us.github.io/gardener-fe/"
+  "homepage": "https://gardener-of-us.github.io/gardener-fe/",
   "name": "react-material-dashboard",
   "author": "DeviasIO",
   "licence": "MIT",
