--- a/package.json
+++ b/package.json
@@ -58,6 +58,20 @@
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.2.1",
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "http-proxy-middleware": "^1.2.0",
+    "node-sass": "^5.0.0",
+    "react-app-polyfill": "^2.0.0",
+    "react-copy-to-clipboard": "^5.0.3",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "react-hot-loader": "^4.13.0",
+    "webpack": "^4.44.2",
+    "webpack-dev-server": "^3.11.1"
   }
 }
