--- a/package.json
+++ b/package.json
@@ -54,11 +54,7 @@
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.0",
     "uuid": "^8.3.0",
-    "yup": "^0.29.3"
-  },
-  "devDependencies": {
-    "eslint-config-airbnb": "^18.2.1",
-    "gh-pages": "^3.1.0",
+    "yup": "^0.29.3",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
@@ -73,5 +69,9 @@
     "react-hot-loader": "^4.13.0",
     "webpack": "^4.44.2",
     "webpack-dev-server": "^3.11.1"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^18.2.1",
+    "gh-pages": "^3.1.0"
   }
 }
