--- a/package.json
+++ b/package.json
@@ -62,13 +62,7 @@
     "http-proxy-middleware": "^1.2.0",
     "node-sass": "^5.0.0",
     "react-app-polyfill": "^2.0.0",
-    "react-copy-to-clipboard": "^5.0.3",
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "react-hot-loader": "^4.13.0",
-    "webpack": "^4.44.2",
-    "webpack-dev-server": "^3.11.1"
+    "react-copy-to-clipboard": "^5.0.3"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.2.1",
