--- a/package.json
+++ b/package.json
@@ -57,9 +57,9 @@
     "yup": "^0.29.3",
     "axios": "^0.21.1",
     "http-proxy-middleware": "^1.2.0",
-    "node-sass": "^5.0.0",
     "react-app-polyfill": "^2.0.0",
-    "react-copy-to-clipboard": "^5.0.3"
+    "react-copy-to-clipboard": "^5.0.3",
+    "react-syntax-highlighter": "^15.4.3"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.2.1",
