--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "http-proxy-middleware": "^1.2.0",
     "react-app-polyfill": "^2.0.0",
     "react-copy-to-clipboard": "^5.0.3",
-    "react-syntax-highlighter": "^15.4.3"
+    "react-syntax-highlighter": "^15.4.3",
+    "react-object-list": "^0.2.10"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.2.1",
