--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "install": "^0.13.0",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
-    "node-sass": "4.14.1",
     "npm": "^7.7.4",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
@@ -59,7 +58,8 @@
     "react-scripts": "^4.0.0",
     "react-syntax-highlighter": "^15.4.3",
     "uuid": "^8.3.0",
-    "yup": "^0.29.3"
+    "yup": "^0.29.3",
+    "node-sass": "4.14.1"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.2.1",
