--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-syntax-highlighter": "^15.4.3",
     "uuid": "^8.3.0",
     "yup": "^0.29.3",
+    "node-gyp": "^8.0.0",
     "node-sass": "^5.0.0",
     "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
