--- a/package.json
+++ b/package.json
@@ -59,12 +59,7 @@
     "react-syntax-highlighter": "^15.4.3",
     "uuid": "^8.3.0",
     "yup": "^0.29.3",
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "react-hot-loader": "^4.13.0",
-    "webpack": "^4.44.2",
-    "webpack-dev-server": "^3.11.1"
+    "react-hot-loader": "^4.13.0"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.2.1",
