--- a/package.json
+++ b/package.json
@@ -60,7 +60,8 @@
     "react-syntax-highlighter": "^15.4.3",
     "uuid": "^8.3.0",
     "yup": "^0.29.3",
-    "react-hot-loader": "^4.13.0"
+    "react-hot-loader": "^4.13.0",
+    "react-keyed-file-browser": "^1.10.0"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^18.2.1",
