--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,7 @@
     "react/react-in-jsx-scope": "off",
     "react/require-default-props": "off",
     // "linebreak-style": ['error', 'windows']
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "quotes": [2, "single", { "avoidEscape": true }]
   }
 }
