--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -62,6 +65,7 @@
     "react-keyed-file-browser": "^1.10.0"
   },
   "devDependencies": {
+    "eslint-config-airbnb": "^18.2.1",
     "gh-pages": "^3.1.0"
   }
 }
