--- a/package.json
+++ b/package.json
@@ -67,5 +67,6 @@
   "devDependencies": {
     "eslint-config-airbnb": "^18.2.1",
     "gh-pages": "^3.1.0"
-  }
+  },
+  "proxy": "http://3.35.137.141:9090"
 }
